--- a/conf/hazelcast.xml.example
+++ b/conf/hazelcast.xml.example
@@ -35,7 +35,7 @@
 		<map-store enabled="true">
 			<class-name>com.mozilla.bagheera.hazelcast.persistence.HBaseMapStore</class-name>
 			<write-delay-seconds>5</write-delay-seconds>
-			<property name="hazelcast.hbase.pool.size">50</property>
+			<property name="hazelcast.hbase.pool.size">20</property>
 			<property name="hazelcast.hbase.table">telemetry</property>
 			<property name="hazelcast.hbase.column.family">data</property>
 			<property name="hazelcast.hbase.column.qualifier">json</property>
@@ -48,26 +48,30 @@
 		<max-size>0</max-size>
 		<eviction-percentage>25</eviction-percentage>
 		<merge-policy>hz.ADD_NEW_ENTRY</merge-policy>
-		<!-- NoOpMapStore
-        <map-store enabled="true">
-            <class-name>com.mozilla.bagheera.hazelcast.persistence.NoOpMapStore</class-name>
-            <write-delay-seconds>5</write-delay-seconds>
-        </map-store>
-        -->
-		<!-- BerkeleyMapStore
-        <map-store enabled="true">
-            <class-name>com.mozilla.bagheera.hazelcast.persistence.BerkeleyMapStore</class-name>
-            <write-delay-seconds>5</write-delay-seconds>
-            <property name="bdb.home">/tmp/</property>
-        </map-store>
-        -->
 		<!-- HBaseMapStore -->
 		<map-store enabled="true">
 			<class-name>com.mozilla.bagheera.hazelcast.persistence.HBaseMapStore</class-name>
 			<write-delay-seconds>5</write-delay-seconds>
-			<property name="hazelcast.hbase.pool.size">50</property>
+			<property name="hazelcast.hbase.pool.size">20</property>
 			<property name="hazelcast.hbase.table">metrics_ping</property>
-			<property name="hazelcast.hbase.column.family">ping</property>
+			<property name="hazelcast.hbase.column.family">data</property>
+			<property name="hazelcast.hbase.column.qualifier">json</property>
+		</map-store>
+	</map>
+	<map name="testpilot">
+		<time-to-live-seconds>20</time-to-live-seconds>
+		<backup-count>1</backup-count>
+		<eviction-policy>NONE</eviction-policy>
+		<max-size>0</max-size>
+		<eviction-percentage>25</eviction-percentage>
+		<merge-policy>hz.ADD_NEW_ENTRY</merge-policy>
+		<!-- HBaseMapStore -->
+		<map-store enabled="true">
+			<class-name>com.mozilla.bagheera.hazelcast.persistence.HBaseMapStore</class-name>
+			<write-delay-seconds>5</write-delay-seconds>
+			<property name="hazelcast.hbase.pool.size">20</property>
+			<property name="hazelcast.hbase.table">testpilot</property>
+			<property name="hazelcast.hbase.column.family">data</property>
 			<property name="hazelcast.hbase.column.qualifier">json</property>
 		</map-store>
 	</map>
