--- a/conf/hazelcast.xml.example
+++ b/conf/hazelcast.xml.example
@@ -75,4 +75,41 @@
 			<property name="hazelcast.hbase.column.qualifier">json</property>
 		</map-store>
 	</map>
+    <queue name="tasks">
+        <!--
+            Maximum size of the queue. When a JVM's local queue size reaches the maximum,
+            all put/offer operations will get blocked until the queue size
+            of the JVM goes down below the maximum.
+            Any integer between 0 and Integer.MAX_VALUE. 0 means Integer.MAX_VALUE. Default is 0.
+        -->
+        <max-size-per-jvm>10000</max-size-per-jvm>
+        
+        <!--
+            Name of the map configuration that will be used for the backing distributed
+            map for this queue.
+        -->
+        <backing-map-ref>socorrosearch</backing-map-ref>
+    </queue>    
+	
+	<map name="socorrosearch">
+		<backup-count>1</backup-count>	
+<!--
+		<time-to-live-seconds>20</time-to-live-seconds>
+		<eviction-policy>NONE</eviction-policy>
+		<max-size>0</max-size>
+		<eviction-percentage>25</eviction-percentage>
+		<merge-policy>hz.ADD_NEW_ENTRY</merge-policy>
+-->		
+		<!-- HBaseMapStore -->
+		<map-store enabled="true">
+			<class-name>com.mozilla.bagheera.hazelcast.persistence.ElasticSearchIndexQueueStore</class-name>
+			<write-delay-seconds>2</write-delay-seconds>
+			<property name="hazelcast.elasticsearch.index">socorro</property>
+			<property name="hazelcast.elasticsearch.type.name">crash_reports</property>
+			<property name="hazelcast.hbase.pool.size">20</property>
+			<property name="hazelcast.hbase.table">crash_reports</property>
+			<property name="hazelcast.hbase.column.family">processed_data</property>
+			<property name="hazelcast.hbase.column.qualifier">json</property>
+		</map-store>
+	</map>
 </hazelcast>
