Fixing log4j.properties to something more appropriate

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,20 +1,27 @@
-log4j.rootCategory=INFO, R, O
+#log4j.debug=true
+
+log4j.rootCategory=INFO, stdout, R
 
 # Stdout
-log4j.appender.O=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
+# Debugging pattern
+#log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}]%5p%6.6r[%t]%x - %C.%M(%F:%L) - %m%n
 
 # File
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=logs/application.log
-
+log4j.appender.R.Append=true
 # Control the maximum log file size
 log4j.appender.R.MaxFileSize=10240KB
-
 # Archive log files (one backup file here)
 log4j.appender.R.MaxBackupIndex=1
-
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.O.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
 
-log4j.appender.R.layout.ConversionPattern=[%d{ISO8601}]%5p%6.6r[%t]%x - %C.%M(%F:%L) - %m%n
-log4j.appender.O.layout.ConversionPattern=[%d{ISO8601}]%5p%6.6r[%t]%x - %C.%M(%F:%L) - %m%n
+
+
+
+
+
