--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,6 +1,6 @@
 #log4j.debug=true
 
-log4j.rootCategory=INFO, stdout, R
+log4j.rootCategory=INFO, stdout, DRFA
 
 # Stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -10,18 +10,11 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
 #log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}]%5p%6.6r[%t]%x - %C.%M(%F:%L) - %m%n
 
 # File
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=logs/application.log
-log4j.appender.R.Append=true
-# Control the maximum log file size
-log4j.appender.R.MaxFileSize=10240KB
-# Archive log files (one backup file here)
-log4j.appender.R.MaxBackupIndex=1
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
-
-
-
-
-
-
+log4j.appender.DRFA=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.DRFA.File=logs/application.log
+log4j.appender.DRFA.DatePattern=.yyyy-MM-dd
+log4j.appender.DRFA.Append=true
+log4j.appender.DRFA.layout=org.apache.log4j.PatternLayout
+log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
+# Debugging Pattern format
+#log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M(%L)) - %m%n
