--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
 
 # File
 log4j.appender.DRFA=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DRFA.File=logs/application.log
+log4j.appender.DRFA.File=${bagheera.log.dir}/bagheera.log
 log4j.appender.DRFA.DatePattern=.yyyy-MM-dd
 log4j.appender.DRFA.Append=true
 log4j.appender.DRFA.layout=org.apache.log4j.PatternLayout
