adding map store and multiple hbase gets

--- a/conf/elasticsearch.yml
+++ b/conf/elasticsearch.yml
@@ -1,6 +1,9 @@
 # Cluster Settings
 cluster:
   name: socorro
+  
+path:
+  data: s-data  
 # Gateway Settings
 #gateway:
 #  recover_after_nodes: 1
