Adding ability to return 201 response

--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -1,3 +1,11 @@
+# Telemetry
 telemetry.max.bytes=10240
+
+# Testpilot
 testpilot.max.bytes=1048576
+
+# Release
 release.allow.get.access=true
+
+# Syncorro
+syncorro.post.response=true
