Fixed bug in reading of properties for wildcard maps

--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -2,7 +2,8 @@
 telemetry.max.bytes=10240
 
 # Testpilot
-testpilot.max.bytes=1048576
+testpilot_*.max.bytes=1048576
+testpilot_*.post.response=true
 
 # Release
 release.allow.get.access=true
