--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -5,11 +5,9 @@ telemetry.max.bytes=10240
 testpilot_*.max.bytes=1048576
 testpilot_*.post.response=true
 
-# Release
-release.allow.get.access=true
-
-# Syncorro
-syncorro.post.response=true
-
-# Metrics Services
-metricsservices.validate.json=false
+# Metrics
+metrics.max.bytes=32768
+metrics.allow.get.access=true
+metrics.allow.delete.access=true
+metrics.pre.commit=true
+metrics.pre.commit.class=com.mozilla.bagheera.rest.interceptors.MetricsPingPreCommit
