--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,12 @@
 		<artifactId>akela</artifactId>
 		<version>0.2-SNAPSHOT</version>
 	</dependency>
-	
+
+	<dependency>
+		<groupId>commons-cli</groupId>
+		<artifactId>commons-cli</artifactId>
+		<version>1.2</version>
+	</dependency>
   </dependencies>
 
   <build>
