--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
   </properties>
   
   <repositories>
+  	<repository>
+      <id>mozilla-metrics-releases</id>
+      <url>http://mozilla-metrics.github.com/maven2/releases</url>
+    </repository>
     <repository>
       <id>mozilla-metrics-snapshots</id>
       <url>http://mozilla-metrics.github.com/maven2/snapshots</url>
@@ -312,12 +316,19 @@
 		<artifactId>akela</artifactId>
 		<version>0.2-SNAPSHOT</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>com.maxmind</groupId>
+		<artifactId>maxmind-geoip</artifactId>
+		<version>1.2.5</version>
+	</dependency>
 
 	<dependency>
 		<groupId>commons-cli</groupId>
 		<artifactId>commons-cli</artifactId>
 		<version>1.2</version>
 	</dependency>
+	
   </dependencies>
 
   <build>
