Tweaked the sample config to add an example for MaxMind GeoIP, as well as disabling GET requests for the "metrics" map.

--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -1,3 +1,7 @@
+# General
+# Uncomment the following to enable MaxMind GeoIP Lookups
+#general.maxmind.db.path=/usr/local/share/GeoIP/GeoIP.dat
+
 # Telemetry
 telemetry.max.bytes=65536
 
@@ -6,8 +10,8 @@ testpilot_*.max.bytes=1048576
 testpilot_*.post.response=true
 
 # Metrics
-metrics.max.bytes=32768
-metrics.allow.get.access=true
+metrics.max.bytes=524288
+metrics.allow.get.access=false
 metrics.allow.delete.access=true
 metrics.pre.commit=true
 metrics.pre.commit.class=com.mozilla.bagheera.rest.interceptors.MetricsPingPreCommit
