--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -1,17 +1,7 @@
 # General
+max.content.length=1048576
 # Uncomment the following to enable MaxMind GeoIP Lookups
 #general.maxmind.db.path=/usr/local/share/GeoIP/GeoIP.dat
 
-# Telemetry
-telemetry.max.bytes=65536
-
-# Testpilot
-testpilot_*.max.bytes=1048576
-testpilot_*.post.response=true
-
 # Metrics
-metrics.max.bytes=524288
-metrics.allow.get.access=false
 metrics.allow.delete.access=true
-metrics.pre.commit=true
-metrics.pre.commit.class=com.mozilla.bagheera.rest.interceptors.MetricsPingPreCommit
