--- a/conf/hazelcast.xml.example
+++ b/conf/hazelcast.xml.example
@@ -25,23 +25,10 @@
 		<keep-alive-seconds>60</keep-alive-seconds>
 	</executor-service>
 	<map name="telemetry">
-		<time-to-live-seconds>20</time-to-live-seconds>
 		<backup-count>1</backup-count>
 		<eviction-policy>NONE</eviction-policy>
 		<max-size>0</max-size>
-		<eviction-percentage>25</eviction-percentage>
 		<merge-policy>hz.ADD_NEW_ENTRY</merge-policy>
-		<!-- HBaseMapStore -->
-		<map-store enabled="true">
-			<class-name>com.mozilla.bagheera.hazelcast.persistence.HBaseMapStore</class-name>
-			<write-delay-seconds>5</write-delay-seconds>
-			<property name="hazelcast.hbase.key.prefix.date">true</property>
-			<property name="hazelcast.hbase.pool.size">20</property>
-			<property name="hazelcast.hbase.table">telemetry</property>
-			<property name="hazelcast.hbase.column.family">data</property>
-			<property name="hazelcast.hbase.column.qualifier">json</property>
-			<property name="hazelcast.store.format">json</property>
-		</map-store>
 	</map>
 	<map name="testpilot_*">
 		<time-to-live-seconds>20</time-to-live-seconds>
@@ -50,7 +37,6 @@
 		<max-size>0</max-size>
 		<eviction-percentage>25</eviction-percentage>
 		<merge-policy>hz.ADD_NEW_ENTRY</merge-policy>
-		<!-- HdfsMapStore -->
 		<map-store enabled="true">
 			<class-name>com.mozilla.bagheera.hazelcast.persistence.SequenceFileMapStore</class-name>
 			<write-delay-seconds>5</write-delay-seconds>
@@ -66,18 +52,10 @@
 		<max-size>0</max-size>
 		<eviction-percentage>25</eviction-percentage>
 		<merge-policy>hz.ADD_NEW_ENTRY</merge-policy>
-		<!-- HBaseMapStore -->
+		<!-- NoOp -->
 		<map-store enabled="true">
-			<class-name>com.mozilla.bagheera.hazelcast.persistence.HBaseMapStore</class-name>
+			<class-name>com.mozilla.bagheera.hazelcast.persistence.NoOpMapStore</class-name>
 			<write-delay-seconds>5</write-delay-seconds>
-			<property name="hazelcast.hbase.key.prefix.date">false</property>
-			<property name="hazelcast.hbase.pool.size">20</property>
-			<property name="hazelcast.hbase.table">metrics</property>
-			<property name="hazelcast.hbase.column.family">data</property>
-			<property name="hazelcast.hbase.column.qualifier">json</property>
-			<property name="hazelcast.store.format">json</property>
-			<property name="hazelcast.allow.load">true</property>
-			<property name="hazelcast.allow.delete">true</property>
 		</map-store>
 	</map>
 </hazelcast>
