--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,20 @@
       <artifactId>commons-lang</artifactId>
       <version>2.3</version>
     </dependency>
-    
+	
+	<dependency>
+		<groupId>commons-cli</groupId>
+		<artifactId>commons-cli</artifactId>
+		<version>1.2</version>
+	</dependency>
+	
+	<!-- GeoIP -->
+	<dependency>
+		<groupId>com.maxmind</groupId>
+		<artifactId>maxmind-geoip</artifactId>
+		<version>1.2.5</version>
+	</dependency>
+	
 	<!-- Jackson JSON Processor -->
 	<dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -85,41 +98,6 @@
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-smile</artifactId>
       <version>1.9.4</version>
-    </dependency>
-
-	<!-- Jersey JAX-RS -->
-	<dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-bundle</artifactId>
-      <version>1.11</version>
-    </dependency>
-	<dependency>
-      <groupId>com.sun.jersey.contribs</groupId>
-      <artifactId>jersey-multipart</artifactId>
-      <version>1.11</version>
-    </dependency>
-    <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>3.3.1</version>
-        <scope>runtime</scope>
-    </dependency>
-    
-	<!-- Jetty -->
-	<dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-server</artifactId>
-      <version>7.6.0.v20120127</version>
-    </dependency>
-	<dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-servlet</artifactId>
-      <version>7.6.0.v20120127</version>
-    </dependency>
-	<dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-util</artifactId>
-      <version>7.6.0.v20120127</version>
     </dependency>
 
 	<!-- Netty -->
@@ -216,6 +194,18 @@
       		<artifactId>jsp-api</artifactId>
       		<groupId>javax.servlet.jsp</groupId>
       	</exclusion>
+      	<exclusion>
+      		<artifactId>jetty-util</artifactId>
+      		<groupId>org.mortbay.jetty</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jetty</artifactId>
+      		<groupId>org.mortbay.jetty</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>servlet-api</artifactId>
+      		<groupId>javax.servlet</groupId>
+      	</exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -307,26 +297,48 @@
       		<artifactId>protobuf-java</artifactId>
       		<groupId>com.google.protobuf</groupId>
       	</exclusion>
+      	<exclusion>
+      		<artifactId>jaxb-api</artifactId>
+      		<groupId>javax.xml.bind</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jamon-runtime</artifactId>
+      		<groupId>org.jamon</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jersey-core</artifactId>
+      		<groupId>com.sun.jersey</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jersey-server</artifactId>
+      		<groupId>com.sun.jersey</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>avro-ipc</artifactId>
+      		<groupId>org.apache.avro</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>avro</artifactId>
+      		<groupId>org.apache.avro</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jetty-util</artifactId>
+      		<groupId>org.mortbay.jetty</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jsr311-api</artifactId>
+      		<groupId>javax.ws.rs</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>servlet-api-2.5</artifactId>
+      		<groupId>org.mortbay.jetty</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jetty</artifactId>
+      		<groupId>org.mortbay.jetty</groupId>
+      	</exclusion>
       </exclusions>
     </dependency>
-
-	<dependency>
-		<groupId>com.mozilla</groupId>
-		<artifactId>akela</artifactId>
-		<version>0.2-SNAPSHOT</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>com.maxmind</groupId>
-		<artifactId>maxmind-geoip</artifactId>
-		<version>1.2.5</version>
-	</dependency>
-
-	<dependency>
-		<groupId>commons-cli</groupId>
-		<artifactId>commons-cli</artifactId>
-		<version>1.2</version>
-	</dependency>
 	
   </dependencies>
 
