Reworked what metrics are collected

--- a/conf/bagheera.metrics.properties
+++ b/conf/bagheera.metrics.properties
@@ -1,13 +1,10 @@
-bagheera.metrics.webserver.port=8082
-bagheera.metrics.webserver.static.path=/tmp/bagheera_metrics
-
-bagheera.metrics.rrd.enable=true
-bagheera.metrics.rrd.db.update.secs=5
-bagheera.metrics.rrd.db.path=/tmp/rrds
-bagheera.metrics.rrd.graph.update.secs=5
-bagheera.metrics.rrd.graph.path=/tmp/bagheera_metrics/graphs/
-
+# Ganglia
 bagheera.metrics.ganglia.enable=true
-bagheera.metrics.ganglia.host=239.2.11.71
+bagheera.metrics.ganglia.host=239.2.12.79
 bagheera.metrics.ganglia.port=8649
 bagheera.metrics.ganglia.update.secs=15
+# Graphite
+bagheera.metrics.graphite.enable=false
+bagheera.metrics.graphite.host=graphite.example.com
+bagheera.metrics.graphite.port=2003
+bagheera.metrics.graphite.update.secs=60
