Major refactor to try to use kafka as the queue

--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -1,5 +1,7 @@
 # General
+valid.namespaces=telemetry,testpilot_*,marketplace_*,metrics
 max.content.length=1048576
+
 # Uncomment the following to enable MaxMind GeoIP Lookups
 #general.maxmind.db.path=/usr/local/share/GeoIP/GeoIP.dat
 
